# world-modality-vla

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  REPORT.md  RESEARCH_ANALYSIS.md  agent.md  environment.yml  flare_study.md  pyproject.toml  requirements.txt  train_baseline_a.py  train_baseline_b.py  train_model_c.py
benchmarks/: README.md  __init__.py
benchmarks/libero/: README.md  __init__.py  eval_libero_success.py  export_libero_tasks_jsonl.py
benchmarks/metaworld/: README.md  __init__.py  eval_metaworld_success.py
bundles/: world-modality-vla.bundle
coc_vla/: DEEP_DIVE.md  README.md  __init__.py  coc_generation.py  config.py  data.py  eval_coc.py  model.py  train.py
coc_vla/prompts/: coc_episode_prompt.txt
docs/: AGENT_SYSTEM_PROMPT.md  GPU_STRATEGY.md  L40S_RUNBOOK.md  LLM_VLA_FPLUS.md  MI300X_LIBERO_SMOLVLA_WORLD.md  ONBOARDING.md  RELATED_WORK_VIDEOWORLD.md  SMOLVLA_WORLD_FUSION_ABLATIONS.md  VM_CONTINUATION_GUIDE.md  WORLD_MOE_ROUTING.md  WRIST_CAMERA_EXPERIMENT_PLAN.md
lerobot_policy_world_modality/: __init__.py  cli.py  configuration_smolvla_world.py  modeling_smolvla_world.py  processor_smolvla_world.py  world_latents_cache.py
ops/: README.md  pull_mi300x_artifacts.sh  push_vjepa_latents_to_hf.sh  rclone_gdrive_setup.md  run_with_rclone_sync.sh  sync_rclone_dir.sh  sync_rclone_file.sh
paper/: PAPER_DRAFT.md
scripts/: analyze_lerobot_logs.py  launch_parallel_mi300x_smolvla_world.sh  mi300x_wait_for_latents_then_run.sh  run_fplus_experiments.sh  run_mi300x_smolvla_world_matrix.sh  test_all_models.py  wait_for_pid_then_run.sh
world_modality/: __init__.py  action_flow.py  analyze_world_tokens.py  config.py  data_sr100.py  device.py  eval_libero.py  eval_offline.py  inference_sr100.py  inspect_token_images.py  intervention_corrupt_future.py  intervention_corrupt_world.py  llm_vla_dataset.py  llm_vla_policy.py  model.py  precompute_instruction_embeddings.py  precompute_world_latents.py  precompute_world_tokens.py  text.py  train.py  train_llm_vla.py  train_utils.py  vision.py  vq.py
